--- a/appExpress/package.json
+++ b/appExpress/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "save": "^2.9.0"
   }
