--- a/appExpress/package.json
+++ b/appExpress/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "joi": "^17.9.1",
     "save": "^2.9.0"
   }
 }
