--- a/appExpress/package.json
+++ b/appExpress/package.json
@@ -9,10 +9,16 @@
   "author": "valenby",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "joi": "^17.9.1",
+    "mongoose": "^7.0.4",
     "save": "^2.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.13"
   }
 }
