--- a/appSQL_v3/package.json
+++ b/appSQL_v3/package.json
@@ -14,11 +14,14 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "redis-om": "^0.3.6",
     "save": "^2.9.0",
     "sequelize": "^6.31.0",
+    "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
