--- a/appSQL_v3/package.json
+++ b/appSQL_v3/package.json
@@ -4,7 +4,9 @@
   "description": "montando app en express",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch ./index.js"
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node -r dotenv/config build/index.js",
+    "dev": "npx nodemon -r dotenv/config"
   },
   "author": "valenby",
   "license": "ISC",
@@ -26,7 +28,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.13",
-    "sequelize-cli": "^6.6.0"
+    "@types/node": "^18.16.16",
+    "nodemon": "^2.0.22",
+    "rimraf": "^5.0.1",
+    "sequelize-cli": "^6.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
