--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,15 @@ jobs:
       - name: Checkout
       - uses: actions/checkout@v3.5.3
       
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.5.2
+        with: 
+          -node-version: 18.x
+          
+      - name: Install
+        run: npm ci --silent
+      
+      
       - name: compile
         run: npx tsc
 
