--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,8 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          working-directory: "appSQL_v3/"
           name: build
-          path: build
+          path: appSQL_v3/build
     
 
 
