--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.5.2
         with: 
-          -node-version: 18.x
+          node-version: 18.x
           
       - name: Install
         working-directory: "appSQL_v3/"
