--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
    runs-on: ubuntu-latest 
    steps: 
       - name: Checkout
-        uses: actions/checkout@v3.5.3
+        uses: actions/checkout@v3
       
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.5.2
+        uses: actions/setup-node@v3
         with: 
-          node-version: 18.x
+          node-version: 18
           
       - name: Install
         working-directory: "appSQL_v3/"
